--- a/src/styles/theme/_variables.scss
+++ b/src/styles/theme/_variables.scss
@@ -6,7 +6,6 @@
 $color-primary: #566BB1;
 $color-secondary: #18753C;
 $color-tertiary: #ECECFF;
-$white: #FFFFFF;
 
 /* ***************
  * System Colors
